# uncrash

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  org.uncrash.Daemon.conf  package.nix  uncrash.desktop  uncrashd.service.in
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
.github/workflows/: build-nix.yml  format-check.yml  release.yml
polkit/: org.uncrash.policy
scripts/: set-cpu-freq.sh
src/: cpucontroller.cpp  cpucontroller.h  main.cpp  main.qml  org.uncrash.Daemon.xml  powermonitor.cpp  powermonitor.h  settingsmanager.cpp  settingsmanager.h  systemprotector.cpp  systemprotector.h  systemtrayicon.cpp  systemtrayicon.h  temperaturemonitor.cpp  temperaturemonitor.h  version.h.in
src/client/: daemonclient.cpp  daemonclient.h
src/daemon/: daemonservice.cpp  daemonservice.h  main.cpp
src/utils/: cli.cpp  cli.h
